Se agrega CRUD de marcas y swagger del mismo CRUD
